--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Sell My Ideas to U
+name: Sell My Ideas to You
 
 # Short bio or description (displayed in the header)
-description: Gaming Analytics for Social Games
+description: Gaming Analytics for Social Casino and Casual Games
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -16,15 +16,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 #
 
 # Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble:
-  email:
-  facebook:
-  flickr:
+footer-links: http://sell2u.github.io
+  dribbble: 
+  email: zhang.neal@gmail.com
+  facebook: 
+  flickr: 
   github: barryclark/jekyll-now
-  instagram:
-  linkedin:
-  pinterest:
+  instagram: 
+  linkedin: 
+  pinterest: 
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://sell2u.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
