--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 footer-links: http://sell2u.github.io
   dribbble: 
   email: zhang.neal@gmail.com
-  facebook: 
+  facebook: #https://www.facebook.com/zhangneal
   flickr: 
-  github: barryclark/jekyll-now
+  github: http://sell2u.github.com
   instagram: 
-  linkedin: 
+  linkedin: https://www.linkedin.com/in/zhangneal
   pinterest: 
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: #zhangneal
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
