--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Sell My Ideas to You
 
 # Short bio or description (displayed in the header)
-description: Gaming Analytics for Social Casino and Casual Games
+description: Gaming Analytics for Landbase & Social Casino, and Casual Games
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
