--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email: zhang.neal@gmail.com
   facebook: #https://www.facebook.com/zhangneal
   flickr: 
-  github: http://sell2u.github.com
+  github: sell2u
   instagram: 
-  linkedin: https://www.linkedin.com/in/zhangneal
+  linkedin: zhangneal
   pinterest: 
   rss: # just type anything here for a working RSS icon
   twitter: #zhangneal
